--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "rxjs": "~7.5.0",
+    "tic-tac-toe-minimax": "1.0.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
